# facenet-utils

./: LICENSE  README.md  setup.cfg  setup.py
facenet_utils/: __init__.py  embedding.py  image_collection.py  image_utils.py  inference_wrappers.py
facenet_utils/examples/: extract_faces_from_gallery.py
