# -*- coding: utf-8 -*-
[metadata]
name = facenet-utils
version = 0.1.0
author = Alex Park
description = Utilities for detecting and computing face embeddings.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = AI, face-detection, face-embeddings, tensorflow, tflite
url = https://github.com/apark263/facenet-utils
project_urls =
    Bug Tracker = https://github.com/apark263/facenet-utils/issues
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 1 - Beta
    Intended Audience :: Developers
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7
include_package_data = true
install_requires =
    Pillow>=8.0
    face-detection-tflite

[flake8]
exclude =
    .eggs,
    .git,
    __pycache__,
    build,
    dist